# file-roller-plugin

./: CHANGELOG.md  README.md  meson.build  package-lock.json  package.json
data/: com.paysonwallach.file-roller-plugin.plug  meson.build
meta/: README.md.njk
src/: Plugin.vala  meson.build
